Fix hover color and center calendar, rename index.scss to main.scss

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,7 +4,7 @@ $border-size: 1px;
 $font-size: 30px;
 $font-color: #000;
 $grey: #eee;
-$pink: #f5a9d6;
+$pink: #FFBFCB;
 $animation-duration: 0.5s;
 
 // Calendar styles
@@ -14,7 +14,9 @@ $animation-duration: 0.5s;
   width: calc(($cell-size + $border-size * 2) * 7 + 10px);
   gap: $border-size;
   padding: 10px;
-  counter-reset: day-counter; // Добавляем сброс счетчика на 1
+  counter-reset: day-counter;
+  align-items: center; // Центрируем по вертикали
+  justify-content: center; // Центрируем по горизонтали
 
   &__day {
     position: relative;
