--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -12,7 +12,7 @@ body {
 .calendar {
   display: flex;
   flex-wrap: wrap;
-  width: calc(7 * 100px + 6px);
+  width: calc(7 * 100px + 1px * (7 - 1));
   gap: 1px;
   padding: 10px;
 }
