--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,18 +1,24 @@
 body {
   margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.calendar {
+.calendar-container__title {
+  display: block;
+  width: fit-content;
+  margin: 0 auto;
+}
+.calendar-container .calendar {
   width: 726px;
   display: flex;
   flex-wrap: wrap;
   gap: 1px;
   padding: 10px;
 }
-
-.calendar__day {
+.calendar-container .calendar__day {
   box-sizing: border-box;
   display: flex;
   align-items: center;
@@ -25,134 +31,102 @@ body {
   font-size: 30px;
   transition: 0.5s;
 }
-
-.calendar__day:hover {
+.calendar-container .calendar__day:hover {
   background-color: #ffbfcb;
   transform: translateY(-20px);
   transition: 0.5s;
 }
-
-.calendar__day:nth-child(1)::after {
+.calendar-container .calendar__day:nth-child(1)::after {
   content: "1";
 }
-
-.calendar__day:nth-child(2)::after {
+.calendar-container .calendar__day:nth-child(2)::after {
   content: "2";
 }
-
-.calendar__day:nth-child(3)::after {
+.calendar-container .calendar__day:nth-child(3)::after {
   content: "3";
 }
-
-.calendar__day:nth-child(4)::after {
+.calendar-container .calendar__day:nth-child(4)::after {
   content: "4";
 }
-
-.calendar__day:nth-child(5)::after {
+.calendar-container .calendar__day:nth-child(5)::after {
   content: "5";
 }
-
-.calendar__day:nth-child(6)::after {
+.calendar-container .calendar__day:nth-child(6)::after {
   content: "6";
 }
-
-.calendar__day:nth-child(7)::after {
+.calendar-container .calendar__day:nth-child(7)::after {
   content: "7";
 }
-
-.calendar__day:nth-child(8)::after {
+.calendar-container .calendar__day:nth-child(8)::after {
   content: "8";
 }
-
-.calendar__day:nth-child(9)::after {
+.calendar-container .calendar__day:nth-child(9)::after {
   content: "9";
 }
-
-.calendar__day:nth-child(10)::after {
+.calendar-container .calendar__day:nth-child(10)::after {
   content: "10";
 }
-
-.calendar__day:nth-child(11)::after {
+.calendar-container .calendar__day:nth-child(11)::after {
   content: "11";
 }
-
-.calendar__day:nth-child(12)::after {
+.calendar-container .calendar__day:nth-child(12)::after {
   content: "12";
 }
-
-.calendar__day:nth-child(13)::after {
+.calendar-container .calendar__day:nth-child(13)::after {
   content: "13";
 }
-
-.calendar__day:nth-child(14)::after {
+.calendar-container .calendar__day:nth-child(14)::after {
   content: "14";
 }
-
-.calendar__day:nth-child(15)::after {
+.calendar-container .calendar__day:nth-child(15)::after {
   content: "15";
 }
-
-.calendar__day:nth-child(16)::after {
+.calendar-container .calendar__day:nth-child(16)::after {
   content: "16";
 }
-
-.calendar__day:nth-child(17)::after {
+.calendar-container .calendar__day:nth-child(17)::after {
   content: "17";
 }
-
-.calendar__day:nth-child(18)::after {
+.calendar-container .calendar__day:nth-child(18)::after {
   content: "18";
 }
-
-.calendar__day:nth-child(19)::after {
+.calendar-container .calendar__day:nth-child(19)::after {
   content: "19";
 }
-
-.calendar__day:nth-child(20)::after {
+.calendar-container .calendar__day:nth-child(20)::after {
   content: "20";
 }
-
-.calendar__day:nth-child(21)::after {
+.calendar-container .calendar__day:nth-child(21)::after {
   content: "21";
 }
-
-.calendar__day:nth-child(22)::after {
+.calendar-container .calendar__day:nth-child(22)::after {
   content: "22";
 }
-
-.calendar__day:nth-child(23)::after {
+.calendar-container .calendar__day:nth-child(23)::after {
   content: "23";
 }
-
-.calendar__day:nth-child(24)::after {
+.calendar-container .calendar__day:nth-child(24)::after {
   content: "24";
 }
-
-.calendar__day:nth-child(25)::after {
+.calendar-container .calendar__day:nth-child(25)::after {
   content: "25";
 }
-
-.calendar__day:nth-child(26)::after {
+.calendar-container .calendar__day:nth-child(26)::after {
   content: "26";
 }
-
-.calendar__day:nth-child(27)::after {
+.calendar-container .calendar__day:nth-child(27)::after {
   content: "27";
 }
-
-.calendar__day:nth-child(28)::after {
+.calendar-container .calendar__day:nth-child(28)::after {
   content: "28";
 }
-
-.calendar__day:nth-child(29)::after {
+.calendar-container .calendar__day:nth-child(29)::after {
   content: "29";
 }
-
-.calendar__day:nth-child(30)::after {
+.calendar-container .calendar__day:nth-child(30)::after {
   content: "30";
 }
-
-.calendar__day:nth-child(31)::after {
+.calendar-container .calendar__day:nth-child(31)::after {
   content: "31";
 }
 
@@ -197,7 +171,7 @@ body {
 }
 
 .calendar--start-day-sun .calendar__day:first-child {
-  margin-left: 0;
+  margin-left: 0px;
 }
 
 /*# sourceMappingURL=main.css.map */
