--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,43 +1,56 @@
 body {
   margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.calendar {
-  width: 726px;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 1px;
-  padding: 10px;
+.calendar-container {
 
-  &__day {
-    box-sizing: border-box;
+  &__title {
+    display: block;
+    width: fit-content;
+    margin: 0 auto;
+  }
+
+  .calendar {
+    width: 726px;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100px;
-    height: 100px;
-    background-color: #eee;
-    border: 1px solid black;
+    flex-wrap: wrap;
+    gap: 1px;
+    padding: 10px;
 
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 30px;
-    transition: 0.5s;
-  }
+    &__day {
+      box-sizing: border-box;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 100px;
+      height: 100px;
+      background-color: #eee;
+      border: 1px solid black;
 
-  &__day:hover {
-    background-color: #ffbfcb;
-    transform: translateY(-20px);
-    transition: 0.5s;
-  }
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 30px;
+      transition: 0.5s;
+    }
 
-  @for $i from 1 through 31 {
-    &__day:nth-child(#{$i})::after {
-      content: '#{$i}';
+    &__day:hover {
+      background-color: #ffbfcb;
+      transform: translateY(-20px);
+      transition: 0.5s;
+    }
+
+    @for $i from 1 through 31 {
+      &__day:nth-child(#{$i})::after {
+        content: '#{$i}';
+      }
     }
   }
 }
+
+
 
 @for $days from 28 through 31 {
   .calendar--month-length-#{$days} .calendar__day:nth-child(n + #{$days + 1}) {
