Added variables file and moved -of-week variable to it.

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,4 +2,180 @@ body {
   margin: 0;
 }
 
+body {
+  margin: 0;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar-container__title {
+  display: block;
+  width: fit-content;
+  margin: 0 auto;
+}
+.calendar-container .calendar {
+  width: 726px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1px;
+  padding: 10px;
+}
+.calendar-container .calendar__day {
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100px;
+  height: 100px;
+  background-color: #eee;
+  border: 1px solid black;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+  transition: 0.5s;
+}
+.calendar-container .calendar__day:hover {
+  background-color: #ffbfcb;
+  transform: translateY(-20px);
+  transition: 0.5s;
+}
+.calendar-container .calendar__day:nth-child(1)::after {
+  content: "1";
+}
+.calendar-container .calendar__day:nth-child(2)::after {
+  content: "2";
+}
+.calendar-container .calendar__day:nth-child(3)::after {
+  content: "3";
+}
+.calendar-container .calendar__day:nth-child(4)::after {
+  content: "4";
+}
+.calendar-container .calendar__day:nth-child(5)::after {
+  content: "5";
+}
+.calendar-container .calendar__day:nth-child(6)::after {
+  content: "6";
+}
+.calendar-container .calendar__day:nth-child(7)::after {
+  content: "7";
+}
+.calendar-container .calendar__day:nth-child(8)::after {
+  content: "8";
+}
+.calendar-container .calendar__day:nth-child(9)::after {
+  content: "9";
+}
+.calendar-container .calendar__day:nth-child(10)::after {
+  content: "10";
+}
+.calendar-container .calendar__day:nth-child(11)::after {
+  content: "11";
+}
+.calendar-container .calendar__day:nth-child(12)::after {
+  content: "12";
+}
+.calendar-container .calendar__day:nth-child(13)::after {
+  content: "13";
+}
+.calendar-container .calendar__day:nth-child(14)::after {
+  content: "14";
+}
+.calendar-container .calendar__day:nth-child(15)::after {
+  content: "15";
+}
+.calendar-container .calendar__day:nth-child(16)::after {
+  content: "16";
+}
+.calendar-container .calendar__day:nth-child(17)::after {
+  content: "17";
+}
+.calendar-container .calendar__day:nth-child(18)::after {
+  content: "18";
+}
+.calendar-container .calendar__day:nth-child(19)::after {
+  content: "19";
+}
+.calendar-container .calendar__day:nth-child(20)::after {
+  content: "20";
+}
+.calendar-container .calendar__day:nth-child(21)::after {
+  content: "21";
+}
+.calendar-container .calendar__day:nth-child(22)::after {
+  content: "22";
+}
+.calendar-container .calendar__day:nth-child(23)::after {
+  content: "23";
+}
+.calendar-container .calendar__day:nth-child(24)::after {
+  content: "24";
+}
+.calendar-container .calendar__day:nth-child(25)::after {
+  content: "25";
+}
+.calendar-container .calendar__day:nth-child(26)::after {
+  content: "26";
+}
+.calendar-container .calendar__day:nth-child(27)::after {
+  content: "27";
+}
+.calendar-container .calendar__day:nth-child(28)::after {
+  content: "28";
+}
+.calendar-container .calendar__day:nth-child(29)::after {
+  content: "29";
+}
+.calendar-container .calendar__day:nth-child(30)::after {
+  content: "30";
+}
+.calendar-container .calendar__day:nth-child(31)::after {
+  content: "31";
+}
+
+.calendar--month-length-28 .calendar__day:nth-child(n+29) {
+  display: none;
+}
+
+.calendar--month-length-29 .calendar__day:nth-child(n+30) {
+  display: none;
+}
+
+.calendar--month-length-30 .calendar__day:nth-child(n+31) {
+  display: none;
+}
+
+.calendar--month-length-31 .calendar__day:nth-child(n+32) {
+  display: none;
+}
+
+.calendar--start-day-mon .calendar__day:first-child {
+  margin-left: 101px;
+}
+
+.calendar--start-day-tue .calendar__day:first-child {
+  margin-left: 202px;
+}
+
+.calendar--start-day-wed .calendar__day:first-child {
+  margin-left: 303px;
+}
+
+.calendar--start-day-thu .calendar__day:first-child {
+  margin-left: 404px;
+}
+
+.calendar--start-day-fri .calendar__day:first-child {
+  margin-left: 505px;
+}
+
+.calendar--start-day-sat .calendar__day:first-child {
+  margin-left: 606px;
+}
+
+.calendar--start-day-sun .calendar__day:first-child {
+  margin-left: 0px;
+}
+
 /*# sourceMappingURL=index.css.map */
