--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -49,7 +49,7 @@ $animation-duration: 0.5s;
 @each $day, $margin in (mon: 0, tue: 1, wed: 2, thu: 3, fri: 4, sat: 5, sun: 6) {
   .calendar--start-#{$day} {
     .calendar__day:first-child {
-      margin-left: calc(($cell-size + $border-size * 2) * $margin - $border-size);
+      margin-left: calc(619px - $border-size);
     }
   }
 }
