add task solution

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,12 @@
+@import '/src/styles/blocks/variables';
+@import '/src/styles/blocks/calendar';
+
 body {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  box-sizing: border-box;
 }
