fix smol problems #2

--- a/src/style.css
+++ b/src/style.css
@@ -222,7 +222,7 @@ body {
   transform: translateY(-20px);
 }
 
-.calendar--start-day-sun .calendar__day:nth-child {
+.calendar--start-day-sun .calendar__day:nth-child(1) {
   margin-left: calc(2 * 100px + 1px);
 }
 
