--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,29 @@
+$month-length: 31;
+$main-color: #eee;
+$border-color: #000;
+$hover-color: #ffbfcb;
+$font-family: Arial, sans-serif;
+$gap: 1px;
+$day-size: 100px;
+$columns: 7;
+$padding: 10px;
+$calendar-starting-from-wednes-day: (
+  mon: 0,
+  tue: 1,
+  wed: 2,
+  thu: 3,
+  fri: 4,
+  sat: 5,
+  sun: 6,
+);
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
 .calendar {
   display: flex;
   flex-wrap: wrap; // дае працювати нормально
@@ -21,9 +47,7 @@
     font-family: $font-family;
     font-size: 16px;
 
-
-
-    @for $i from 1 through $month-lengh {
+    @for $i from 1 through $month-length {
       &:nth-child(#{$i})::before {
         content: '#{$i}';
         font-size: 30px;
@@ -34,8 +58,7 @@
     cursor: pointer;
     transition:
       transform 0.5s,
-      background-color 0.5s
-    ;
+      background-color 0.5s;
 
     &:hover {
       background-color: $hover-color;
@@ -44,7 +67,7 @@
   }
 
   &--start-day-sun {
-    .calendar__day:nth-child {
+    .calendar__day:nth-child(1) {
       margin-left: calc(2 * #{$day-size} + #{$gap});
     }
   }
