--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -1,5 +1,9 @@
 body {
   margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
 .calendar {
@@ -7,7 +11,7 @@ body {
   flex-wrap: wrap;
   gap: 1px;
   padding: 10px;
-  max-width: 726px;
+  max-width: 706px;
 
   &__day {
     display: flex;
