--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,74 @@
-body {
+$calendar__day-bg-color: #eee;
+$calendar__day-size: 100px;
+$calendar__day-gap: 1px;
+$padding: 10px;
+$month-length: 31;
+$start-day: 'sun';
+$days: (
+  'mon': 0,
+  'tue': 1,
+  'wed': 2,
+  'thu': 3,
+  'fri': 4,
+  'sat': 5,
+  'sun': 6,
+);
+
+.page {
   margin: 0;
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar {
+  width: calc(7 * $calendar__day-size + 6 * $calendar__day-gap);
+  padding: $padding;
+  display: flex;
+  flex-flow: row wrap;
+  gap: $calendar__day-gap;
+
+  &__day {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    height: $calendar__day-size;
+    width: $calendar__day-size;
+    background-color: $calendar__day-bg-color;
+    border: 1px solid black;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+
+    transition:
+      background-color 0.5s,
+      transform 0.5s;
+
+    &:hover {
+      background-color: #ffbfcb;
+      cursor: pointer;
+      transform: translateY(-20px);
+    }
+  }
+}
+
+@for $each-day from 1 through $month-length {
+  .calendar__day:nth-child(#{$each-day})::before {
+    content: '#{$each-day}';
+  }
+}
+
+@for $number from 28 through $month-length {
+  .calendar--month-length-#{$number} {
+    .calendar__day:nth-child(n + #{$number + 1}) {
+      display: none;
+    }
+  }
+}
+
+@each $day, $day-number in $days {
+  .calendar--start-day-#{$day} .calendar__day:first-child {
+    margin-left: $day-number * ($calendar__day-size + $calendar__day-gap);
+  }
 }
