add calendar rev1

--- a/src/styles/blocks/calender.scss
+++ b/src/styles/blocks/calender.scss
@@ -4,6 +4,7 @@
   padding: $cell-padding;
   gap: $cell-gap;
   width: $calendar-width;
+  margin: auto;
 
   @each $name, $day in $week-days {
     &--start-day--#{$name} &__day:first-child {
