--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -3,4 +3,4 @@ $cell-gap: 1px;
 $cell-padding: 10px;
 $calendar-width: 7 * $cell-size + 6 * $cell-gap;
 $week-size: 7;
-$week-days: 'mon' 0, 'tue' 1, 'wed' 2, 'thu' 3, 'fri' 4, 'sat' 5, 'sun' 6;
+$week-days: ('mon' 0, 'tue' 1, 'wed' 2, 'thu' 3, 'fri' 4, 'sat' 5, 'sun' 6);
