--- a/src/styles/blocks/calender.scss
+++ b/src/styles/blocks/calender.scss
@@ -1,35 +1,20 @@
 .calendar {
   display: flex;
   flex-wrap: wrap;
-  padding: $cell-padding;
   gap: $cell-gap;
+  padding-inline: 10px;
   width: $calendar-width;
-  margin: auto;
-
-  @each $name, $day in $week-days {
-    &--start-day--#{$name} &__day:first-child {
-      margin-left: ($cell-size + 1) * $day;
-    }
-  }
-
-  @for $days from 28 through 31 {
-    &--month-length--#{$days} &__day:nth-child(n + #{$days + 1}) {
-      display: none;
-    }
-  }
 
   &__day {
-    box-sizing: border-box;
     display: flex;
     justify-content: center;
     align-items: center;
+    box-sizing: border-box;
     width: $cell-size;
     height: $cell-size;
     border: 1px solid black;
     background-color: #eee;
-    transition:
-      color 0.5s,
-      transform 0.5s;
+    transition-duration: 500ms;
 
     @for $day-count from 1 through 31 {
       &:nth-child(#{$day-count})::before {
@@ -42,7 +27,23 @@
 
   &__day:hover {
     cursor: pointer;
-    background-color: pink;
+    background-color: #ffbfcb;
     transform: translateY(-20px);
+  }
+}
+
+@each $name, $day in $week-days {
+  .calendar--start-day-#{$name} {
+    .calendar__day:first-child {
+      margin-left: ($cell-size + $cell-gap) * $day;
+    }
+  }
+}
+
+@for $days from 28 through 31 {
+  .calendar--month-length-#{$days} {
+    .calendar__day:nth-child(n + #{$days + 1}) {
+      display: none;
+    }
   }
 }
