--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,5 +2,11 @@
 @import '../styles/blocks/calender';
 
 body {
+  font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
   margin: 0;
 }
