--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,85 @@
-body {
+$cell-size: 100px;
+$flex-gap: 1px;
+$days: (
+  'mon': 0,
+  'tue': 1,
+  'wed': 2,
+  'thu': 3,
+  'fri': 4,
+  'sat': 5,
+  'sun': 6,
+);
+$month-length: 31;
+$start-day: 'sun';
+$animation-duration: 0.5s;
+
+.page__body {
   margin: 0;
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar {
+  &__body {
+    display: flex;
+    flex-flow: row wrap;
+    gap: $flex-gap;
+
+    padding: 10px;
+
+    width: calc($cell-size * 7 + $flex-gap * 6);
+  }
+
+  &__day {
+    width: $cell-size;
+    height: $cell-size;
+
+    display: block;
+    box-sizing: border-box;
+
+    font-size: 30px;
+    text-align: center;
+    align-content: center;
+    font-family: Arial, sans-serif;
+    background-color: #eee;
+    border: 1px solid black;
+
+    transition:
+      background-color $animation-duration,
+      transform $animation-duration;
+
+    @for $day-number from 1 through $month-length {
+      &:nth-child(#{$day-number}):before {
+        content: '#{$day-number}';
+      }
+    }
+
+    &:hover {
+      cursor: pointer;
+      background-color: #ffbfcb;
+      transform: translateY(-20px);
+    }
+  }
+
+  &--start-day {
+    @each $day, $offset in $days {
+      &-#{$day} {
+        .calendar__day:first-child {
+          margin-left: calc(($cell-size + $flex-gap) * $offset);
+        }
+      }
+    }
+  }
+
+  &--month-length {
+    @for $day-number from 28 through $month-length {
+      &-#{$day-number} {
+        .calendar__day:nth-child(n + #{$day-number + 1}) {
+          display: none;
+        }
+      }
+    }
+  }
 }
