Remove 'calendar-container' div and associated styles as per review comments

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,14 +6,14 @@ body {
   align-items: center;
 }
 
-.calendar-container .calendar {
+.calendar {
   width: 726px;
   display: flex;
   flex-wrap: wrap;
   gap: 1px;
   padding: 10px;
 }
-.calendar-container .calendar__day {
+.calendar__day {
   box-sizing: border-box;
   display: flex;
   align-items: center;
@@ -26,102 +26,102 @@ body {
   font-size: 30px;
   transition: 0.5s;
 }
-.calendar-container .calendar__day:hover {
+.calendar__day:hover {
   background-color: #ffbfcb;
   transform: translateY(-20px);
   transition: 0.5s;
 }
-.calendar-container .calendar__day:nth-child(1)::after {
+.calendar__day:nth-child(1)::after {
   content: "1";
 }
-.calendar-container .calendar__day:nth-child(2)::after {
+.calendar__day:nth-child(2)::after {
   content: "2";
 }
-.calendar-container .calendar__day:nth-child(3)::after {
+.calendar__day:nth-child(3)::after {
   content: "3";
 }
-.calendar-container .calendar__day:nth-child(4)::after {
+.calendar__day:nth-child(4)::after {
   content: "4";
 }
-.calendar-container .calendar__day:nth-child(5)::after {
+.calendar__day:nth-child(5)::after {
   content: "5";
 }
-.calendar-container .calendar__day:nth-child(6)::after {
+.calendar__day:nth-child(6)::after {
   content: "6";
 }
-.calendar-container .calendar__day:nth-child(7)::after {
+.calendar__day:nth-child(7)::after {
   content: "7";
 }
-.calendar-container .calendar__day:nth-child(8)::after {
+.calendar__day:nth-child(8)::after {
   content: "8";
 }
-.calendar-container .calendar__day:nth-child(9)::after {
+.calendar__day:nth-child(9)::after {
   content: "9";
 }
-.calendar-container .calendar__day:nth-child(10)::after {
+.calendar__day:nth-child(10)::after {
   content: "10";
 }
-.calendar-container .calendar__day:nth-child(11)::after {
+.calendar__day:nth-child(11)::after {
   content: "11";
 }
-.calendar-container .calendar__day:nth-child(12)::after {
+.calendar__day:nth-child(12)::after {
   content: "12";
 }
-.calendar-container .calendar__day:nth-child(13)::after {
+.calendar__day:nth-child(13)::after {
   content: "13";
 }
-.calendar-container .calendar__day:nth-child(14)::after {
+.calendar__day:nth-child(14)::after {
   content: "14";
 }
-.calendar-container .calendar__day:nth-child(15)::after {
+.calendar__day:nth-child(15)::after {
   content: "15";
 }
-.calendar-container .calendar__day:nth-child(16)::after {
+.calendar__day:nth-child(16)::after {
   content: "16";
 }
-.calendar-container .calendar__day:nth-child(17)::after {
+.calendar__day:nth-child(17)::after {
   content: "17";
 }
-.calendar-container .calendar__day:nth-child(18)::after {
+.calendar__day:nth-child(18)::after {
   content: "18";
 }
-.calendar-container .calendar__day:nth-child(19)::after {
+.calendar__day:nth-child(19)::after {
   content: "19";
 }
-.calendar-container .calendar__day:nth-child(20)::after {
+.calendar__day:nth-child(20)::after {
   content: "20";
 }
-.calendar-container .calendar__day:nth-child(21)::after {
+.calendar__day:nth-child(21)::after {
   content: "21";
 }
-.calendar-container .calendar__day:nth-child(22)::after {
+.calendar__day:nth-child(22)::after {
   content: "22";
 }
-.calendar-container .calendar__day:nth-child(23)::after {
+.calendar__day:nth-child(23)::after {
   content: "23";
 }
-.calendar-container .calendar__day:nth-child(24)::after {
+.calendar__day:nth-child(24)::after {
   content: "24";
 }
-.calendar-container .calendar__day:nth-child(25)::after {
+.calendar__day:nth-child(25)::after {
   content: "25";
 }
-.calendar-container .calendar__day:nth-child(26)::after {
+.calendar__day:nth-child(26)::after {
   content: "26";
 }
-.calendar-container .calendar__day:nth-child(27)::after {
+.calendar__day:nth-child(27)::after {
   content: "27";
 }
-.calendar-container .calendar__day:nth-child(28)::after {
+.calendar__day:nth-child(28)::after {
   content: "28";
 }
-.calendar-container .calendar__day:nth-child(29)::after {
+.calendar__day:nth-child(29)::after {
   content: "29";
 }
-.calendar-container .calendar__day:nth-child(30)::after {
+.calendar__day:nth-child(30)::after {
   content: "30";
 }
-.calendar-container .calendar__day:nth-child(31)::after {
+.calendar__day:nth-child(31)::after {
   content: "31";
 }
 
