--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,10 @@
+@import './utils/variables';
+@import './blocks/calendar';
+
 body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
   margin: 0;
 }
