--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,89 @@
+$day-size: 100px;
+$day-gap: 1px;
+$calendar-width: $day-size * 7 + $day-gap * 6 + 20px;
+$hover-color: #ffbfcb;
+$default-color: #eee;
+$border-color: #000;
+$transition-duration: 0.5s;
+
+* {
+  box-sizing: border-box;
+}
+
 body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
   margin: 0;
+  font-family: Arial, sans-serif;
+  font-size: 30px;
+}
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  gap: $day-gap;
+  width: $calendar-width;
+  padding: 10px;
+
+  // Day styles
+  .calendar__day {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: $day-size;
+    height: $day-size;
+    background-color: $default-color;
+    border: 1px solid $border-color;
+    transition-duration: $transition-duration;
+
+    @for $i from 1 through 31 {
+      &:nth-child(#{$i})::before {
+        content: '#{$i}';
+      }
+    }
+
+    &:hover {
+      cursor: pointer;
+      background-color: $hover-color;
+      transform: translateY(-20px);
+      transition-duration: $transition-duration;
+    }
+  }
+
+  &--start-day-mon .calendar__day:first-child {
+    margin-left: 0;
+  }
+
+  &--start-day-tue .calendar__day:first-child {
+    margin-left: $day-size + $day-gap;
+  }
+
+  &--start-day-wed .calendar__day:first-child {
+    margin-left: ($day-size + $day-gap) * 2;
+  }
+
+  &--start-day-thu .calendar__day:first-child {
+    margin-left: ($day-size + $day-gap) * 3;
+  }
+
+  &--start-day-fri .calendar__day:first-child {
+    margin-left: ($day-size + $day-gap) * 4;
+  }
+
+  &--start-day-sat .calendar__day:first-child {
+    margin-left: ($day-size + $day-gap) * 5;
+  }
+
+  &--start-day-sun .calendar__day:first-child {
+    margin-left: ($day-size + $day-gap) * 6;
+  }
+
+  @for $i from 28 through 31 {
+    &--month-length-#{$i} .calendar__day:nth-child(n + #{$i + 1}) {
+      display: none;
+    }
+  }
 }
