--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,59 @@
+@import '../utils/variables';
+
+* {
+  box-sizing: border-box;
+}
+
 body {
-  margin: 0;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+}
+
+.calendar {
+  display: flex;
+  align-self: center;
+  flex-wrap: wrap;
+  gap: 1px;
+  padding: 10px;
+  max-width: 726px;
+
+  &__day {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid black;
+    width: 100px;
+    height: 100px;
+    background-color: $main-color;
+    transition-duration: 0.5s;
+
+    &:hover {
+      cursor: pointer;
+      background-color: $hover-color;
+      transform: translate(0, -20px);
+      transition-duration: 0.5s;
+    }
+
+    @for $numOfDay from 1 through 31 {
+      &:nth-child(#{$numOfDay})::before {
+        content: '#{$numOfDay}';
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 30px;
+      }
+    }
+  }
+
+  @for $lastDay from 28 to 31 {
+    &--month-length-#{$lastDay} :nth-child(n + #{$lastDay + 1}) {
+      display: none;
+    }
+  }
+
+  @each $dayName, $shift in $days {
+    &--start-day-#{$dayName} :first-child {
+      margin-left: $shift;
+    }
+  }
 }
