--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,78 @@
-body {
+$days: (mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6);
+$cell-height: 100px;
+$cell-width: 100px;
+$cell-gap: 1px;
+$padding: 10px;
+
+* {
+  font-family: Arial, Helvetica, sans-serif;
+  box-sizing: border-box;
   margin: 0;
+  padding: 0;
+  font-size: 30px;
+}
+
+.calendar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  height: 100vh;
+
+  &__wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    gap: $cell-gap;
+
+    padding: $padding;
+    width: calc((7 * $cell-width) + (6 * $cell-gap) + (2 * $padding));
+  }
+
+  &__day {
+    position: relative;
+    height: $cell-height;
+    width: $cell-width;
+    background-color: #eee;
+    border: 1px solid #000;
+
+    transition: all 0.5s;
+
+    &:hover {
+      background-color: #ffbfcb;
+      cursor: pointer;
+      transform: translate(0, -20px);
+    }
+
+    @each $day, $index in $days {
+      .calendar--start-day-#{$day} & {
+        &:nth-child(1) {
+          margin-left: #{$index * ($cell-height + $cell-gap)};
+        }
+      }
+    }
+  }
+
+  @for $days from 28 through 31 {
+    &--month-length-#{$days} {
+      .calendar__day {
+        @for $i from 1 through 31 {
+          &:nth-child(#{$i}) {
+            @if $i <= $days {
+              &::before {
+                content: '#{$i}';
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                font-style: Arial;
+                font-size: 30px;
+              }
+            } @else {
+              display: none;
+            }
+          }
+        }
+      }
+    }
+  }
 }
