--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -2,9 +2,9 @@ $day-size: 100px;
 $bc-color: #eee;
 $bc-color-h: #ffbfcb;
 $columns: 7;
-$calendar-margin: 1px;
+$calendar-gap: 1px;
 $calendar-width: calc(
-  ($day-size * $columns) + (($columns - 1) * $calendar-margin)
+  ($day-size * ($columns)) + (($columns - 1) * $calendar-gap)
 );
 $start-day: (
   mon: 0,
