--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -7,7 +7,7 @@
   gap: 1px;
   padding: 10px;
 
-  @for $i from 1 through $month-lenght {
+  @for $i from 1 through $month-length {
     &--day-length--31 :nth-child(#{$i}),
     &--day-length--30 :nth-child(#{$i}),
     &--day-length--29 :nth-child(#{$i}),
@@ -30,7 +30,7 @@
     }
   }
 
-  @for $day from 1 through $month-lenght {
+  @for $day from 1 through $month-length {
     &__day:nth-child(#{$day})::before {
       content: '#{$day}';
       position: absolute;
