--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,80 @@
 @import '../styles/utils/variables';
-@import './block/calendar';
-@import './block/day';
+
+html {
+  margin: 0;
+  padding: 0;
+}
+
+@each $day, $index in $days {
+  .calendar--start-day-#{$day} {
+    .calendar__day:first-child {
+      margin-left: calc(#{$index} * $size-day + #{$index} * $gap);
+    }
+  }
+}
+
+@for $days from 28 through 31 {
+  .calendar--month-length-#{$days} {
+    @for $i from 1 through $days {
+      .calendar__day:nth-child(#{$i})::before {
+        content: '#{$i}';
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+    }
+    .calendar__day:nth-child(n + #{$days + 1}) {
+      display: none;
+    }
+  }
+}
+
+.calendar {
+  display: flex;
+  align-content: center;
+  gap: 1px;
+  padding: 10px;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  height: calc(100vh - 20px);
+  max-width: calc(7 * $size-day + 6 * $gap + 20px);
+
+  --month-length: 31;
+}
+
+.calendar__day {
+  display: block;
+  box-sizing: border-box;
+  border: 1px solid black;
+  height: $size-day;
+  width: $size-day;
+  background-color: #eee;
+  position: relative;
+  transition:
+    transform 0.5s ease,
+    background-color 0.5s ease;
+
+  &::before {
+    content: attr(data-day);
+    color: black;
+    position: absolute;
+    top: 50%; // Центрируем текст
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+
+  &:hover {
+    cursor: pointer;
+    background-color: #ffbfcb;
+    transform: translateY(-20px);
+  }
+}
+
+@for $i from 1 through 31 {
+  .calendar__day:nth-child(#{$i})::before {
+    content: '#{$i}';
+  }
+}
