--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,60 @@
 body {
   margin: 0;
 }
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1px;
+  justify-content: start;
+  max-width: calc((100px * 8) + 6px); /* Width for 7 blocks + gaps */
+  padding: 10px;
+}
+
+.calendar__box {
+  width: 100px; /* Width of each block */
+  height: 100px; /* Height of each block */
+  background-color: #eee;
+  border: 1px solid black;
+  position: relative; /* For absolute positioning of pseudo-element */
+  transition-duration: 0.5s;
+}
+
+.calendar__box:hover {
+  cursor: pointer;
+  background-color: #ffbfcb;
+  transform: translateY(-20px);
+}
+
+.calendar__box:first-child {
+  display: flex;
+  justify-content: start;
+}
+
+/* Pseudo-element to display day numbers */
+@for $i from 1 through 31 {
+  .calendar__box:nth-child(#{$i})::before {
+    content: '#{$i}';
+    position: absolute;
+    top: 50%; /* Center vertically */
+    left: 50%; /* Center horizontally */
+    transform: translate(-50%, -50%);
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+  }
+}
+
+@for $j from 28 through 31 {
+  .month-length--#{$j} .calendar__day:nth-child(n + #{$j + 1}) {
+    display: none; /* Приховує дні після останнього */
+  }
+}
+
+/* Start-day modifiers */
+@each $day, $index in (sun: 0, mon: 1, tue: 2, wed: 3, thu: 4, fri: 5, sat: 6) {
+  .calendar--#{$day} .calendar__box:nth-child(1) {
+    margin-left: calc(
+      102.5px * #{$index}
+    ); /* Add margin-left for the first day */
+  }
+}
