add task solution

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -30,15 +30,21 @@ html {
   }
 }
 
+body {
+  display: flex;
+  margin: 0 auto;
+  align-content: center;
+  gap: 1px;
+  height: 100vh;
+  max-width: calc(7 * $size-day + 6 * $gap + 20px);
+}
+
 .calendar {
   display: flex;
   align-content: center;
   gap: 1px;
   padding: 10px;
   flex-wrap: wrap;
-  margin: 0 auto;
-  height: calc(100vh - 20px);
-  max-width: calc(7 * $size-day + 6 * $gap + 20px);
 
   --month-length: 31;
 }
