--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,14 +1,28 @@
-body {
+$start-day: 'sun';
+$days: ('mon' 0, 'tue' 1, 'wed' 2, 'thu' 3, 'fri' 4, 'sat' 5, 'sun' 6);
+$calendar__day-gap: 1px;
+$calendar__day-size: 100px;
+$month-length: 31;
+
+.page {
   margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  font-size: 30px;
+  box-sizing: border-box;
 }
 
 .calendar {
   display: flex;
   flex-wrap: wrap;
-  gap: 1px;
+  gap: $calendar__day-gap;
   justify-content: start;
-  max-width: calc((100px * 8) + 6px); /* Width for 7 blocks + gaps */
+  max-width: calc((100px * 8) + 6px);
   padding: 10px;
+  width: 726px;
+  box-sizing: border-box;
 }
 
 .calendar__day {
@@ -16,8 +30,13 @@ body {
   height: 100px; /* Height of each block */
   background-color: #eee;
   border: 1px solid black;
-  position: relative; /* For absolute positioning of pseudo-element */
+
+  // position: relative; /* For absolute positioning of pseudo-element */
   transition-duration: 0.5s;
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .calendar__day:hover {
@@ -26,35 +45,23 @@ body {
   transform: translateY(-20px);
 }
 
-.calendar__day:first-child {
-  display: flex;
-  justify-content: start;
-}
-
 /* Pseudo-element to display day numbers */
 @for $i from 1 through 31 {
   .calendar__day:nth-child(#{$i})::before {
     content: '#{$i}';
-    position: absolute;
-    top: 50%; /* Center vertically */
-    left: 50%; /* Center horizontally */
-    transform: translate(-50%, -50%);
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 30px;
   }
 }
 
 @for $j from 28 through 31 {
-  .month-length--#{$j} .calendar__day:nth-child(n + #{$j + 1}) {
+  .calendar--month-length-#{$j} .calendar__day:nth-child(n + #{$j + 1}) {
     display: none; /* Приховує дні після останнього */
   }
 }
 
 /* Start-day modifiers */
-@each $day, $index in (sun: 0, mon: 1, tue: 2, wed: 3, thu: 4, fri: 5, sat: 6) {
-  .calendar--#{$day} .calendar__day:nth-child(1) {
-    margin-left: calc(
-      102.5px * #{$index}
-    ); /* Add margin-left for the first day */
+@each $day, $day-number in $days {
+  .calendar--start-day-#{$day} .calendar__day:first-child {
+    margin-left: $day-number * ($calendar__day-size + $calendar__day-gap);
   }
 }
