--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,65 @@
+@import '../styles/variables';
+
 body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+
   margin: 0;
+}
+
+.calendar {
+  $week-days: ('mon' 0, 'tue' 1, 'wed' 2, 'thu' 3, 'fri' 4, 'sat' 5, 'sun' 6);
+
+  display: flex;
+  flex-wrap: wrap;
+  width: $calendar-size;
+  gap: $day-gap;
+
+  @each $day, $position in $week-days {
+    &--start-day-#{$day} :first-child {
+      margin-left: ($position) * ($day-margin);
+    }
+  }
+
+  @for $i from 28 through 31 {
+    &--month-length-#{$i} :nth-child(n + #{$i + 1}) {
+      display: none;
+    }
+  }
+
+  &__day {
+    box-sizing: border-box;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    height: $day-size;
+    width: $day-size;
+    background-color: #eee;
+
+    border: 1px solid #000;
+
+    transition-duration: 500ms;
+
+    @for $i from 1 through 31 {
+      &:nth-child(#{$i})::before {
+        content: '' + #{$i};
+      }
+    }
+
+    &::before {
+      display: block;
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 30px;
+    }
+
+    &:hover {
+      cursor: pointer;
+      transform: translateY(-20px);
+      background-color: $day-hover-color;
+    }
+  }
 }
